Update TP 3 - Stochastic Approximation Algorithms Applied to Optimal Execution.ipynb

--- a/TP 3 - Stochastic Approximation Algorithms Applied to Optimal Execution.ipynb
+++ b/TP 3 - Stochastic Approximation Algorithms Applied to Optimal Execution.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "id": "7AjbwzNa9oT3"
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "id": "E3UZx6o69oT3"
    },
@@ -92,7 +92,8 @@
     "r_{i}^{n+1}=r_{i}^{n}+\\gamma_{n+1} H_{i}\\left(r^{n}, Y^{n+1}\\right), r^{0} \\in \\mathcal{P}_{N}, i \\in I_{N}\n",
     "$$ \n",
     "\n",
-    "where $$\n",
+    "where \n",
+    "$$\n",
     "H_{i}(r, Y)=V\\left(\\rho_{i} \\mathbb{1}_{\\left\\{r_{i} V<D_{i}\\right\\}}-\\frac{1}{N} \\sum_{j=1}^{N} \\rho_{j} \\mathbb{1}_{\\left\\{r_{j} V<D_{j}\\right\\}}\\right)\n",
     "$$\n",
     "\n",
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "id": "ufEu-rku9oT5"
    },
@@ -524,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
